tests/should_fail/incomplete_arrow.jou
def main() - void:  # Error: '-' must be immediately followed by '>' to make up the '->' operator
    return
